Back - Ajout de codeLocation pour ModalDTO et intégration en SQL    - Modification de codeLocation pour changer le type en TEXt (à la place de varchar(255)) Front - ajout du bouton Repointer un bug + text pour indiquer de cliquer sur pointer un bug CSS - Modification du overflow en auto pour ajouter la barre de défillement au cas où + min hauteur pour description + css de la balise sélectionnée JS - Ajout du rafraichissement de page si clic sur btnclose   - Bouton Repointer un bug actif au clic qu'après avoir déjà pointer un bug - Ajout du event.preventDefault + boucle pour inclure les balises parentes (avec conditions) + modification des balises afin de faciliter la lecture + mlise en couleur de la balise sélectionner dans le parent final Reste des petits problèmes (risque de boucle sur le handleClick)

--- a/src/main/resources/static/css/modalStyle.css
+++ b/src/main/resources/static/css/modalStyle.css
@@ -90,7 +90,7 @@
     margin: 1% auto 10% auto;
     width: 50%;
     border-radius: 20px;
-    overflow: hidden;
+    overflow: auto;
     padding-bottom: 10px;
 }
 .bugspointer-popup-header{
@@ -140,6 +140,7 @@
     block-size: auto;
     display: inline-block;
     box-sizing: border-box;
+    min-height: 50px;
     height: 70%;
     padding: 5px;
     font-family: var(--font);
@@ -151,6 +152,10 @@
     padding: 0;
     border: 0;
     margin: 0;
+}
+
+.bugspointer-text-balise {
+     color: red !important;
 }
 
 #bugspointer-message-success{
